[Parental Landing] FAQ button alignment issues

--- a/resources/static/css-sass/_parental-faq.scss
+++ b/resources/static/css-sass/_parental-faq.scss
@@ -8,6 +8,7 @@
     @include fontSize-14();
     color: $color-spruceLight;
     text-transform: uppercase;
+    margin-top: 45px;
 }
 
 #faq .qa .question {
